# optimizations

./: CMakeLists.txt  README.md
include/: main.hpp
include/gradient/: conjugate_gradient.hpp  newton.hpp  steepest_descent.hpp
include/syntax_tree/: ast.hpp  differentiator.hpp
include/tokenize/: token.hpp
source/: expressionParser  main.cpp
source/gradient/: conjugate_gradient.cpp  newton.cpp  steepest_descent.cpp
source/syntax_tree/: ast.cpp  differentiator.cpp
source/tokenize/: token.cpp
